Add additiona omit existing tags feature and test case